Small cleanups